# rustyboy

./: Cargo.toml  README.md
src/: gb_cpu.rs  lib.rs  main.rs
src/gb_emulator/: cpu.rs  memory.rs  mod.rs  registers.rs
src/gb_emulator/cpu/: mod.rs  opcodes.rs
src/gb_emulator/memory/: cartridge.rs  mod.rs
src/gb_emulator/utils/: mod.rs
