[package]
name = "rustyboy"
version = "0.1.0"
authors = ["Milan Proell <milan.proell@googlemail.com>", "Kolya Opahle <kolyaopahle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.0.2"
winit = "0.22.0"
interpolation = "0.2.0"