[package]
name = "rustyboy"
version = "0.1.0"
authors = ["Milan Proell <milan.proell@googlemail.com>", "Kolya Opahle <kolyaopahle@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.7.0"
winit = "0.25.0"
interpolation = "0.2.0"
winit_input_helper = "0.10"
env_logger = "0.9"
log = "0.4"