[package]
name = "rustyboy"
version = "0.1.0"
authors = [
  "Milan Proell <milan.proell@googlemail.com>",
  "Kolya Opahle <kolyaopahle@gmail.com>",
]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
interpolation = "0.3.0"
winit_input_helper = "0.15.1"
env_logger = "0.10"
log = "0.4"
